# GuGu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
editor/: CMakeLists.txt  main.cpp
editor/Editor/: EditorCamera.cpp  EditorCamera.h  EditorMainWindow.cpp  EditorMainWindow.h  EditorViewportClient.cpp  EditorViewportClient.h  ISceneOutliner.cpp  ISceneOutliner.h  ISceneOutlinerColumn.h  ITreeItem.h  LevelViewport.cpp  LevelViewport.h  ObjectTreeItem.cpp  ObjectTreeItem.h  ObjectTreeLabel.cpp  OutlinearTreeView.cpp  OutlinearTreeView.h  OutlinerTreeView.cpp  OutlinerTreeView.h  SceneOutliner.cpp  SceneOutliner.h  SceneOutlinerFwd.h  SceneOutlinerGutter.cpp  SceneOutlinerGutter.h  SceneOutlinerStandaloneTypes.cpp  SceneOutlinerTypes.cpp  SceneOutlinerTypes.h  WindowTitleBar.cpp  WindowTitleBar.h
editor/Editor/ContentBrowser/: AssetPicker.cpp  AssetPicker.h  AssetView.cpp  AssetView.h  AssetViewTypes.cpp  AssetViewTypes.h  AssetViewWidgets.cpp  AssetViewWidgets.h  ContentBrowser.cpp  ContentBrowser.h  ContentBrowserDelegates.cpp  ContentBrowserDelegates.h  ContentBrowserItem.cpp  ContentBrowserItem.h  ContentBrowserItemData.cpp  ContentBrowserItemData.h  ContentBrowserSingleton.cpp  ContentBrowserSingleton.h  PathView.cpp  PathView.h  SourcesViewWidgets.cpp  SourcesViewWidgets.h  TreeItem.cpp  TreeItem.h
editor/Editor/Cutscenes/: CutscenesCommon.h  CutscenesEditorPanel.cpp  CutscenesEditorPanel.h  CutscenesTimelineWidget.cpp  CutscenesTimelineWidget.h
editor/Editor/Debug/: ShowTexturePanel.cpp  ShowTexturePanel.h
editor/Editor/PropertyEditor/: AnchorDataCustomization.cpp  AnchorDataCustomization.h  CategoryPropertyNode.cpp  CategoryPropertyNode.h  ColorStructCustomization.cpp  ColorStructCustomization.h  CustomChildBuilder.cpp  CustomChildBuilder.h  DetailCategoryBuilder.cpp  DetailCategoryBuilder.h  DetailCategoryBuilderImpl.cpp  DetailCategoryBuilderImpl.h  DetailCategoryTableRow.cpp  DetailCategoryTableRow.h  DetailExpanderArrow.cpp  DetailExpanderArrow.h  DetailItemNode.cpp  DetailItemNode.h  DetailLayoutBuilder.cpp  DetailLayoutBuilder.h  DetailLayoutBuilderImpl.cpp  DetailLayoutBuilderImpl.h  DetailLayoutHelpers.cpp  DetailLayoutHelpers.h  DetailPropertyRow.cpp  DetailPropertyRow.h  DetailSingleItemRow.cpp  DetailSingleItemRow.h  DetailTableRowBase.cpp  DetailTableRowBase.h  DetailTreeNode.cpp  DetailTreeNode.h  DetailWidgetRow.cpp  DetailWidgetRow.h  DetailsView.cpp  DetailsView.h  DetailsViewBase.cpp  DetailsViewBase.h  DetailsViewGenericObjectFilter.cpp  DetailsViewGenericObjectFilter.h  (+64 more)
editor/Editor/SceneOutliner/: ISceneOutliner.h  ISceneOutlinerColumn.cpp  ISceneOutlinerMode.cpp  ISceneOutlinerMode.h  ITreeItem.cpp  ITreeItem.h  ObjectBrowingMode.cpp  ObjectBrowingMode.h  ObjectDragDropOperation.cpp  ObjectDragDropOperation.h  ObjectMode.cpp  ObjectMode.h  ObjectModeInteractive.cpp  ObjectModeInteractive.h  ObjectPickMode.cpp  ObjectPickMode.h  ObjectTreeItem.cpp  ObjectTreeItem.h  ObjectTreeLabel.cpp  ObjectTreeLabel.h  OutlinerTreeView.cpp  OutlinerTreeView.h  SceneOutliner.cpp  SceneOutliner.h  SceneOutlinerFwd.cpp  SceneOutlinerFwd.h  SceneOutlinerGutter.cpp  SceneOutlinerItemLabelColumn.cpp  SceneOutlinerItemLabelColumn.h  SceneOutlinerStandaloneTypes.cpp  SceneOutlinerStandaloneTypes.h  SceneOutlinerTypes.h
editor/Editor/StyleSet/: EditorStyleSet.cpp  EditorStyleSet.h  Theme.cpp  Theme.h  ThemePanel.cpp  ThemePanel.h
editor/Editor/Terrain/: TerrainEditorPanel.cpp  TerrainEditorPanel.h
editor/Editor/Transaction/: Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h
editor/Editor/UI/: ColorPicker.cpp  ColorPicker.h
editor/ModelImporter/: ModelImporter.cpp  ModelImporter.h
editor/TextureImporter/: TextureImporter.cpp  TextureImporter.h
game/: CMakeLists.txt  GameViewportClient.cpp  GameViewportClient.h  LevelViewport.cpp  LevelViewport.h  main.cpp
src/: CMakeLists.txt  main.cpp  pch.h  xmake.lua
src/Application/: Application.cpp  Application.h  ApplicationMisc.cpp  ApplicationMisc.h  CommonDelegate.cpp  CommonDelegate.h  Input.cpp  Input.h  InputTypes.cpp  InputTypes.h
src/Core/: Archiver.cpp  Archiver.h  DelegateManager.cpp  DelegateManager.h  GuGuFile.cpp  GuGuFile.h  GuGuUtf8Str.cpp  GuGuUtf8Str.h  Guid.cpp  Guid.h  HashCombine.h  Log.h  ObjectPtr.cpp  ObjectPtr.h  ResourcePtr.cpp  ResourcePtr.h  Timer.cpp  Timer.h
src/Core/Animation/: Animator.cpp  Animator.h  GAnimation.cpp  GAnimation.h  Keyframe.cpp  Keyframe.h  KeyframeAnimation.cpp  KeyframeAnimation.h
src/Core/AssetManager/: ARFilter.cpp  ARFilter.h  AssetData.cpp  AssetData.h  AssetManager.cpp  AssetManager.h  Base64.cpp  Base64.h  GameObjectLevelRef.cpp  GameObjectLevelRef.h
src/Core/Collision/: Collision3D.cpp  Collision3D.h
src/Core/Cutscenes/: Applier.cpp  Applier.h  Cutscenes.cpp  Cutscenes.h  Evaluator.cpp  Evaluator.h  TrackData.cpp  TrackData.h  TransformApplier.cpp  TransformApplier.h  TransformEvaluator.cpp  TransformEvaluator.h  testCutScenes.cpp  testCutScenes.h
src/Core/Debug/: DebugDraw.cpp  DebugDraw.h
src/Core/FileSystem/: ByteOrder.cpp  ByteOrder.h  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h
src/Core/GamePlay/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  GamePlayerReflectionRegister.cpp  GamePlayerReflectionRegister.h  GrassComponent.cpp  GrassComponent.h  InputManager.cpp  InputManager.h  Level.cpp  (+28 more)
src/Renderer/: Adapter.cpp  Adapter.h  BindingCache.cpp  BindingCache.h  Color.cpp  Color.h  CommonRenderPasses.cpp  CommonRenderPasses.h  CubeGeometry.h  Demo.cpp  Demo.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  MyMath.h  Renderer.cpp  Renderer.h  ShaderBlob.cpp  ShaderFactory.cpp  ShaderFactory.h  SwapChain.cpp  SwapChain.h  TextureCache.cpp  TextureCache.h  VertexBuffer.cpp  VertexBuffer.h  affine.h  basics.h  containers.h  format-info.cpp  matrix.cpp  matrix.h  misc.cpp  misc.h  nvrhi.h  resource.h  state-tracking.cpp  state-tracking.h  stb_image.cpp  (+4 more)
src/Window/: Window.cpp  Window.h
src/gltf/: gltfLoader.cpp  gltfLoader.h
(+721 files in other folders)
